base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  name: SERVICE_NAME
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: APP_NAME
