base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: INGRESS_NAME
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '5'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '3'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: 200,201,302
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30, load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:533267268220:certificate/675e84c7-8766-4336-8efe-b0ccc5bdc7af
    alb.ingress.kubernetes.io/group.name: dot-books-public-restricted
    alb.ingress.kubernetes.io/group.order: '100'
spec:
  rules:
    - host: HOST_NAME
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            #pathType: Exact
            backend:
                service:
                   name: BACKEND_SERVICE_NAME
                   port:
                     number: 9000
